Co-authored-by: VladZlydar234 <VladZlydar234@users.noreply.github.com>

--- a/app.json
+++ b/app.json
@@ -15,16 +15,35 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.sergeyvahnyuk.Weather"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
+      "package": "com.sergeyvahnyuk.Weather"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationWhenInUsePermission": "Allow WeatherApp to use your location."
+        }
+      ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "0ce6a188-944f-4d68-8b74-c7e631c835fb"
+      }
     }
   }
 }
