--- a/package.json
+++ b/package.json
@@ -6,16 +6,26 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix"
   },
   "dependencies": {
+    "@react-native-community/eslint-config": "^3.2.0",
+    "crypto": "^1.0.1",
+    "eslint": "^8.57.0",
     "expo": "~50.0.8",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-input-select": "^1.3.5",
+    "react-native-permissions": "^4.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint-plugin-prettier": "^5.0.0"
   },
   "private": true
 }
